--- a/styles.css
+++ b/styles.css
@@ -171,11 +171,11 @@ h3{
 
 #next-question-btn {
     margin-top: 20px;
-    padding: 20px 30px;
+    padding: 5% 10%;
     background-color: #64b5f6; /* 明るい青色 */
     color: #ffffff;
     border: none;
-    border-radius:10px;
+    border-radius:5px;
     cursor: pointer;
     transition: background-color 0.3s, box-shadow 0.3s;
 }
