--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,10 @@ h3{
     position: relative; /* 画像を追加するために必要 */
 }
 
+.explanation {
+  text-decoration: underline; /* 下線を引く */
+}
+
 .popup-message {
     font-size: 24px;
     font-weight: bold;
