--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ h3{
   }
 
   .name p {
-    font-size:1.5em
+    font-size:100px
       margin:0px 0px 0px 10px;
       color: #fff;
       font-family: arno-pro,serif;
