--- a/styles.css
+++ b/styles.css
@@ -229,24 +229,25 @@ h3{
     border-bottom:5px double #00a1e9;
   }
 
-  .name p {
-    font-size:100px
-      margin:0px 0px 0px 10px;
-      color: #fff;
-      font-family: arno-pro,serif;
-      font-style: normal;
-      background-image: linear-gradient(
+.name p {
+    font-size: 50px; /* 親要素に基づく相対フォントサイズ */
+    margin: 0px 0px 0px 10px;
+    color: #fff;
+    font-family: arno-pro, serif;
+    font-style: normal;
+    background-image: linear-gradient(
       70deg,
-      rgb(211, 209, 209)  45%, 
-      #fff 50%,
-      rgb(211, 209, 209, 0.3) 55% 
+      rgb(211, 209, 209) 45%, 
+      #fff 50%, 
+      rgba(211, 209, 209, 0.3) 55%
     );
-      background-size: 500% 100%;
-      background-clip: text;
-      -webkit-background-clip: text;
-      color: transparent;
-      animation: shine 2.5s infinite;
-  }
+    background-size: 500% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: shine 2.5s infinite;
+}
+
   
   @keyframes shine {
     0% {
